@@ -75,8 +75,7 @@ pthread_timedjoin_np (threadid, thread_return, abstime)
   pthread_cleanup_push (cleanup, &pd->joinid);
 
   /* Switch to asynchronous cancellation.  */
-  int oldtype;
-  CANCEL_ASYNC (oldtype);
+  int oldtype = CANCEL_ASYNC ();
 
 
   /* Wait for the child.  */
